--- a/questionBank/.classpath
+++ b/questionBank/.classpath
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Hibernate"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Oracle7"/>
-	<classpathentry kind="lib" path="C:/Users/clevi/Desktop/CSCI-6363/project/QuestionBank6363/questionBank/lib/odbc/ojdbc7.jar"/>
 	<classpathentry kind="lib" path="lib/logging/commons-logging-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/ejb/javax.ejb.jar"/>
+	<classpathentry kind="lib" path="lib/odbc/ojdbc7.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Hibernate"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
