--- a/QBServer/WebContent/WEB-INF/web.xml
+++ b/QBServer/WebContent/WEB-INF/web.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:javaee="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
+<!-- <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+		 xmlns="http://java.sun.com/xml/ns/javaee" 
+		 xmlns:javaee="http://xmlns.jcp.org/xml/ns/javaee" 
+		 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" 
+		 version="3.0"> -->
+<!-- <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+		 http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         version="3.1" -->
   <display-name>Question Bank</display-name>
   
   <servlet>
@@ -8,7 +18,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>teacherlogin</servlet-name>
-    <url-pattern>teacherlogin</url-pattern>
+    <url-pattern>/teacherlogin</url-pattern>
   </servlet-mapping>
   
   <servlet>
@@ -17,7 +27,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>AdminLogin</servlet-name>
-    <url-pattern>AdminLogin</url-pattern>
+    <url-pattern>/AdminLogin</url-pattern>
   </servlet-mapping>
   
   <servlet>
@@ -26,7 +36,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>TeacherSignup</servlet-name>
-    <url-pattern>TeacherSignup</url-pattern>
+    <url-pattern>/TeacherSignup</url-pattern>
   </servlet-mapping>
   
   
