--- a/QuestionBank/WebContent/FrontEnd/WebContent/WEB-INF/web.xml
+++ b/QuestionBank/WebContent/FrontEnd/WebContent/WEB-INF/web.xml
@@ -1,41 +1,22 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:javaee="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
-  <display-name>Question Bank</display-name>
-  
-  <servlet>
-    <servlet-name>teacherlogin</servlet-name>
-    <servlet-class>teacherlogin</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>teacherlogin</servlet-name>
-    <url-pattern>teacherlogin</url-pattern>
-  </servlet-mapping>
-  
-  <servlet>
-    <servlet-name>AdminLogin</servlet-name>
-    <servlet-class>AdminLogin</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>AdminLogin</servlet-name>
-    <url-pattern>AdminLogin</url-pattern>
-  </servlet-mapping>
-  
-  <servlet>
-    <servlet-name>TeacherSignup</servlet-name>
-    <servlet-class>TeacherSignup</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>TeacherSignup</servlet-name>
-    <url-pattern>TeacherSignup</url-pattern>
-  </servlet-mapping>
-  
-  
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
+<web-app id="WebApp_ID" version="2.4"
+	xmlns="http://java.sun.com/xml/ns/j2ee"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee
+	http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+	<display-name>Archetype Created Web Application</display-name>
+
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+
+	<servlet>
+		<servlet-name>springweb</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>springweb</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
 </web-app>
