--- a/QBServer/WebContent/WEB-INF/web.xml
+++ b/QBServer/WebContent/WEB-INF/web.xml
@@ -58,4 +58,22 @@ xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns
 		<url-pattern>/UpdateCourse/*</url-pattern>
 	</servlet-mapping>
 	
+	<!-- Question View Mappings -->
+	<servlet-mapping>
+		<servlet-name>SpringMVC</servlet-name>
+		<url-pattern>/CourseAddQuestion</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>SpringMVC</servlet-name>
+		<url-pattern>/ShowQuestion/*</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>SpringMVC</servlet-name>
+		<url-pattern>/EditQuestion/*</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>SpringMVC</servlet-name>
+		<url-pattern>/UpdateQuestion/*</url-pattern>
+	</servlet-mapping>
+	
 </web-app>
