--- a/QuestionBank/.classpath
+++ b/QuestionBank/.classpath
@@ -6,9 +6,9 @@
 	<classpathentry kind="lib" path="lib/logging/commons-logging-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/ejb/javax.ejb.jar"/>
 	<classpathentry kind="lib" path="lib/odbc/ojdbc7.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Hibernate"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/MySQL"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Log4J"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Hibernate"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Junit4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
