--- a/QuestionBank/.classpath
+++ b/QuestionBank/.classpath
@@ -3,12 +3,28 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="lib/logging/commons-logging-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/ejb/javax.ejb.jar"/>
 	<classpathentry kind="lib" path="lib/odbc/ojdbc7.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/MySQL"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Log4J"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Hibernate"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Junit4"/>
+	<classpathentry kind="lib" path="lib/logging/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/logging/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="lib/junit/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/junit/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="lib/odbc/mysql-connector-java-5.1.40-bin.jar"/>
+	<classpathentry kind="lib" path="lib/jpa-metamodel-generator/hibernate-jpamodelgen-5.2.2.Final.jar"/>
+	<classpathentry kind="lib" path="lib/required/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="lib/required/cdi-api-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/required/classmate-1.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/required/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/required/el-api-2.2.jar"/>
+	<classpathentry kind="lib" path="lib/required/geronimo-jta_1.1_spec-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/required/hibernate-commons-annotations-5.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="lib/required/hibernate-core-5.2.2.Final.jar"/>
+	<classpathentry kind="lib" path="lib/required/hibernate-jpa-2.1-api-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/required/jandex-2.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/required/javassist-3.20.0-GA.jar"/>
+	<classpathentry kind="lib" path="lib/required/javax.inject-1.jar"/>
+	<classpathentry kind="lib" path="lib/required/jboss-interceptors-api_1.1_spec-1.0.0.Beta1.jar"/>
+	<classpathentry kind="lib" path="lib/required/jboss-logging-3.3.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/required/jsr250-api-1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
