--- a/QuestionBank/.classpath
+++ b/QuestionBank/.classpath
@@ -2,7 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="lib/ejb/javax.ejb.jar"/>
 	<classpathentry kind="lib" path="lib/odbc/ojdbc7.jar"/>
 	<classpathentry kind="lib" path="lib/logging/commons-logging-1.2.jar"/>
@@ -51,5 +50,10 @@
 	<classpathentry kind="lib" path="lib/odbc/commons-dbcp-1.2.2.jar"/>
 	<classpathentry kind="lib" path="lib/odbc/commons-logging-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/odbc/commons-pool-1.3.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="owner.project.facets" value="java"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
